--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 	</div>
 	
 	<script src='js/lib/knockout-3.4.2.js'></script>
-	<script src="js/app.js"></script>
+	<script src="js/lib/app.js"></script>
 </body>
 
 </html>
