feat: Added css support for older browsers

--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
 		</div>
 	</div>
 	
-	<script src='js/lib/knockout-3.4.2.js'></script>
-	<script src="js/lib/app.js"></script>
+	<script src="lib/knockout-3.4.2.js"></script>
+	<script src="lib/app.js"></script>
 </body>
 
 </html>
