feat: Added game title to the start screen

--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
 			
 				<!--Start Screen-->
 				<div class="ui-screen ui-back" data-bind="visible: startGameShow()">
+					<h1 class="title">The Arena</h1>
 					<h1 class="btn-start" data-bind="click: toggleStartGame">Start Game</h1>
 				</div>
 				
