feat: Added padding and max length to name input

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<div class="ui-column tall-column">
 						<div>
 							<label for="name">Name: </label>
-							<input id="name" type="text" required data-bind="value: nameInput">
+							<input id="name" type="text" maxlength="10" required data-bind="value: nameInput">
 						</div>
 						<div class="detail-select">
 							<div class="portrait-select">
