feat: Corrected colour of item text in the shop

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 				<div class="ui-screen shop-screen" data-bind="visible: shopShow()">
 					<h1>Item Store</h1>
 					<!-- ko with: player -->
-					<img class="town-icon" src="images/gold.png"><span data-bind="text: gold"></span>
+					<img class="town-icon" src="images/gold.png"><span class="shop-gold" data-bind="text: gold"></span>
 					<!-- /ko -->
 					<div class="ui-column">
 						<div class="item-list" data-bind="foreach: items">
