feat: Added information to game over screen

--- a/index.html
+++ b/index.html
@@ -259,7 +259,10 @@
 	<div data-bind="with: player">
 		<div class="modal" data-bind="visible: alive() === false">
 			<div class="popup">
-				<h2>You have died!</h2>
+				<h1>You have died!</h1>
+				<p>You reached level <strong data-bind="text: level"></strong> with a total of <strong data-bind="text: experience"></strong> experience</p>
+				<p>You defeated <strong data-bind="text: $parent.wins"></strong> enemies</p>
+				<img src="images/defeated.jpg">
 				<button class="btn" type="button" data-bind="click: $parent.resetGame">Play Again</button>
 			</div>
 		</div>
