--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
 					<table class="scores">
 						<thead>
 							<tr>
+								<th>Rank</th>
 								<th>Name</th>
 								<th>Class</th>
 								<th>Level</th>
