feat: Added critical strike chance based on dexterity

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<div class="add-stat">
 						<p class="stat-tag"">Critical Strike Chance</p>
 						<img class="stat-icon" src="images/icons/crit-chance.png" data-bind="event: { mouseover: $parent.showTag, mouseout: $parent.hideTag }">
-						<span>0</span>
+						<span data-bind="text: critChance"></span><span>%</span>
 					</div>
 				</div>
 			</div>
