--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="card-front entity-front" data-bind="with: player">
 				<i class="fa fa-arrow-circle-up levelup-icon" aria-hidden="true" data-bind="visible: skillPoints() > 0"></i>
 				<h2 data-bind="text: name"></h2>
-				<h3>Level <span class="level" data-bind="text: level"></span> <span data-bind="text: cl().name"></span></h3>
+				<h3>Level <span class="red" data-bind="text: level"></span> <span data-bind="text: cl().name"></span></h3>
 				<img src="" class="player-portrait" data-bind="attr: { src: portrait }">
 				<h4><span data-bind="text: currentHealth"></span> / <span data-bind="text: maxHealth"></span></h4>
 				<table class="stat-table" >
